<resources>
    <string name="app_name">MAKE 1</string>
    <string name="shopping">官方商店</string>
    <string name="disturb">防丢</string>
    <string name="more">更多</string>
    <string name="map">定位</string>
    <string name="my">我的</string>
    <string name="username">用户名</string>
    <string name="myfriends">我的好友</string>
    <string name="disturbsetting">防丢勿扰设置</string>
    <string name="story">用户故事</string>
    <string name="opinion">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="share">分享MAKE 1</string>
    <string name="question">使用说明</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal">个人资料</string>
    <string name="myLocation">我的位置</string>
    <string name="check">关闭后,好友将无法查看你的位置</string>
    <string name="sex">性别</string>
    <string name="email">邮箱</string>
    <string name="unbound">未绑定</string>
    <string name="esc">退出登录</string>
    <string name="newfriends">新的好友</string>
    <string name="friendsadd">添加</string>
    <string name="addfriends">添加好友</string>
    <string name="boundbluetooth">绑定蓝牙防丢器</string>
    <string name="jurisdiction">防丢提醒权限设置</string>
    <string name="dormant">休眠时段</string>
    <string name="area">勿扰区域</string>
    <string name="areaExplain">选择信任wifi，当手机连接该wifi时App会进入勿扰区域，手机和防丢器都不会再有提醒；</string>
    <string name="home">家</string>
    <string name="addwifi">点击添加wifi</string>
    <string name="company">公司</string>
    <string name="other">其他</string>
    <string name="dormancy">休眠时段里，手机和防丢器都不会有提醒</string>
    <string name="message">通知中心</string>
    <string name="equipmentname">设备名称</string>
    <string name="linktime">连接时间</string>
    <string name="sign">让寻找更简单</string>
    <string name="phoneNum">手机号码</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="forgot">忘记密码</string>
    <string name="register">立即注册</string>
    <string name="otherLogin">其他账号登录</string>
    <string name="title_register">注册</string>
    <string name="finish">完成</string>
    <string name="authcode">验证码</string>
    <string name="getAuthCode">获取验证码</string>
    <string name="register_pwd">请输入6—16位的字母数字</string>
    <string name="consent">点击获取验证码表示您已同意</string>
    <string name="terms">使用条款</string>
    <string name="and">和</string>
    <string name="agreement">隐私协议</string>
    <string name="register_email">请输入邮箱</string>
    <string name="tobound">点击这里绑定设备，添加好友</string>
    <string name="detection">新版本检测</string>
    <string name="version">当前版本号</string>
    <string name="copyright">copyright</string>
    <string name="rights">Lianai.Tech.All rights Reserved</string>
    <string name="not_found">找不到网页</string>
    <string name="unload">处的网页不能载入为：</string>
    <string name="not_resolved">net::ERR_NAME_NOT_RESOLVED</string>
    <string name="imgTitle">图片标题</string>
    <string name="record">位置记录</string>
    <string name="reset">重置密码</string>
    <string name="put_in">提交</string>
    <string name="enter_username">请输入名字</string>
    <string name="abrogate">取消</string>
    <string name="affirm">确认</string>
    <string name="alter_phonenum">修改手机号码</string>
    <string name="region">+86</string>
    <string name="old_phonenum">请输入原手机号</string>
    <string name="send_autthcode">验证码将发送到手机上</string>
    <string name="verify">验证</string>
    <string name="boundemail">绑定邮箱</string>
    <string name="weichat">微信</string>
    <string name="open_location">MAKE 1APP需要使用定位服务确定您的防丢器位置，请打开定位。</string>
    <string name="bound">绑定</string>
    <string name="bound_explain">绑定说明</string>
    <string name="search">搜索中</string>
    <string name="bound_explain_first">1、请将防丢器开机，有按键的防丢器需长按按键3秒以上开机，无按键的防丢器拔出电池绝缘纸即可自动开机。</string>
    <string name="bound_explain_second">2、绑定时请将防丢器与手机保持10厘米以内的距离。</string>
    <string name="find_nothing">搜索不到防丢器？</string>
    <string name="bound_found">点击下面的搜索防丢器进行绑定</string>
    <string name="equipmentName">Nut3</string>
    <string name="signstrength">信号强度</string>
    <string name="attention">绑定防丢器注意事项：</string>
    <string name="attention_first">1、在绑定过程中您需要始终开启蓝牙。</string>
    <string name="attention_second">2、在绑定过程开始前请将防丢器开机，有按键的防丢器需要长按按键3秒以上开机，无按键的防丢器拔出电池绝缘纸通电后即可自动开机。</string>
    <string name="attention_third">2、绑定时请将防丢器与手机保持10厘米以内的距离。</string>
    <string name="operation">搜索不到防丢器操作：</string>
    <string name="operation_first">1、请重启系统蓝牙、重启手机后再次尝试。</string>
    <string name="operation_second">2、请检查防丢器电池是否安装正确（正极朝上）。</string>
    <string name="operation_third">3、请尝试给防丢器换一块新电池。</string>
    <string name="occupy_hint">防丢器已绑定账号，如有疑问请联系客服</string>
    <string name="hardwareID">硬件ID：</string>
    <string name="bound_guide">绑定指南</string>
    <string name="esc_affirm">退出登录后所有的防丢器将断开连接，再次登录前将无法管理，是否确认退出？</string>
    <string name="txtEsc">退出</string>
    <string name="connecting">连接中...</string>
    <string name="distance">所在位置</string>
    <string name="timeout">连接超时</string>
    <string name="can">您可以：</string>
    <string name="can_first">·关闭再开启手机蓝牙；</string>
    <string name="can_second">·确保防丢器已开机（有些防丢器需要按键开机）；</string>
    <string name="can_third">·将手机贴近防丢器（再10厘米距离内）；</string>
    <string name="again">再次连接</string>
    <string name="article">请输入物品名字（例如：钥匙、钱包）</string>
    <string name="key">钥匙</string>
    <string name="wallet">钱包</string>
    <string name="laptop">笔记本电脑</string>
    <string name="suitcase">旅行箱</string>
    <string name="haversack">挎包</string>
    <string name="bound_succeed">绑定成功</string>
    <string name="open_jurisdiction">防丢提醒功能需要APP持续运行，请开启后台运行权限。</string>
    <string name="got_it">知道了</string>
    <string name="open">立即开启</string>
    <string name="bound_state">连接状态</string>
    <string name="lossstatement">声明丢失</string>
    <string name="remind">手机提醒</string>
    <string name="bothway">双向防丢</string>
    <string name="expect">更多精彩，敬请期待！</string>
    <string name="alterImg">修改头像</string>
    <string name="alterName">修改名称</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="delete_statement">删除设备后，再次使用需要重新绑定防丢器，是否确认删除。</string>
    <string name="disturb_inform">系统将会帮助您寻找，丢失信息已加密，只有您可见，找到后会通过自在找APP通知您。</string>
    <string name="find_area">寻找区域</string>
    <string name="not_set">未设置</string>
    <string name="disturb_sign">标记您的物品寻找区域，会提高物品找到几率</string>
    <string name="bothertime">设置临时勿扰时间</string>
    <string name="revocation">撤销设备声明丢失，系统将会停止帮助您寻找，您可以再次声明丢失</string>
    <string name="location">位置</string>
    <string name="breaklocation">断开位置</string>
    <string name="breaktime">断开时间</string>
    <string name="search_location">请输入搜索位置</string>
    <string name="present_radii">当前半径:</string>
    <string name="voice">声音类型</string>
    <string name="notifysound">断开提醒声音</string>
    <string name="warntime">断开提醒时长</string>
    <string name="repetition">断开重复提醒</string>
    <string name="break_explain">手机与设备断开连接时响铃时长</string>
    <string name="repetition_explain">手机和设备断开连接后多次提醒，解锁手机或打开APP即可停止提醒</string>
    <string name="anew">重连提醒</string>
    <string name="anew_explain">手机与设备重新连接时手机提醒</string>
    <string name="firmware_update">固件更新</string>
    <string name="send">发送</string>
    <string name="invite">邀请家人朋友下载注册</string>
    <string name="scan">扫一扫</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="minute">分钟</string>
    <string name="photograph">拍照</string>
    <string name="album">从相册中选取</string>
    <string name="add">+</string>
    <string name="ununited_delete">设备已与您的账号绑定，当前未与手机连接，建议连接后再删除，否则他人无法使用。</string>
    <string name="bound_success">已连接</string>
    <string name="bound_break">连接断开</string>
    <string name="delete_success">删除成功</string>
    <string name="change_success">修改成功</string>
    <string name="back">返回</string>
    <string name="save">保存</string>

</resources>
