<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlt01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">



    <TextView
        android:id="@+id/mTxtPhotograph"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/photograph" />

    <TextView
        android:id="@+id/mTxtAlbum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/album" />

    <TextView
        android:id="@+id/mTxtCancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>