<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="46dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/mEdtRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86" />

            <EditText
                android:id="@+id/mEdtPhoneNum"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="4.20"
                android:hint="@string/phoneNum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imgPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@mipmap/ic_action_message" />

            <EditText
                android:id="@+id/mEdtAuthCode"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:hint="@string/authcode" />

            <Button
                android:id="@+id/BtnAuthCode"
                android:layout_width="wrap_content"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_shape_white"
                android:gravity="center"
                android:text="@string/getAuthCode"
                android:textColor="@color/black"
                android:layout_weight="0.70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAuthCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@mipmap/ic_password" />

            <EditText
                android:id="@+id/mEdtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:hint="@string/register_pwd" />
        </LinearLayout>

        <TextView
            android:id="@+id/TxtConsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/consent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TxtTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and" />

            <TextView
                android:id="@+id/TxtAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>