<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_shape_white"
    android:paddingLeft="@dimen/about_spacing_20"
    android:paddingRight="@dimen/about_spacing_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:weightSum="20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/bound_succeed"
            android:textSize="@dimen/title_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/open_jurisdiction" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:gravity="center"
            android:weightSum="4">

            <Button
                android:id="@+id/mBtnAbrogate"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape_white_small"
                android:text="@string/got_it"
                android:textColor="@color/reseda" />

            <Button
                android:id="@+id/mBtnAffirm"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape_reseda_small"
                android:text="@string/open"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>